# statify

./: Cargo.toml
src/: analysis.rs  bytecode.rs  config.rs  data.rs  fsm.rs  helpers.rs  main.rs  opcodes.rs  prover.rs  utils.rs  z3.rs
src/data/: memory.rs  mod.rs  stack.rs  storage.rs
test-data/: WETH9.asm
